# elias

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
docs/: make.bat
docs/source/: conf.py  elias.rst  index.rst  modules.rst
src/elias/: analysis_manager.py  artifact.py  config.py  data_manager.py  fs.py  generic.py  io.py  model_manager.py  test.py  timing.py
src/elias/data/: combined.py  loader.py  sampling.py  stop_criterion.py
src/elias/evaluator/: keypoint_evaluator.py  paired_face_image_evaluator.py  paired_image_evaluator.py
src/elias/folder/: __init__.py  analysis.py  data.py  folder.py  model.py  run.py
src/elias/manager/: __init__.py  analysis.py  artifact.py  buffered.py  data.py  model.py  run.py
src/elias/util/: __init__.py  batch.py  fs.py  io.py  logger_bundle.py  random.py  range.py  timing.py  typing.py  version.py  wandb_images.py
test/: config.py  data_manager.py  fs.py  generic.py
test/evaluation/: test_evaluation.py
test/folder/: test_data.py  test_folder.py  test_run_folder.py
test/manager/: test_buffered_data_manager.py  test_data_manager.py  test_model_manager.py
test/util/: range.py  timing.py  version.py
