[metadata]
name = elias
version = 0.2.6
author = Tobias Kirschstein
author_email = tobias.kirschstein@gmail.com
description = ELIAS experiment library for facilitating machine learning projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tobias-kirschstein/elias
project_urls =
    # Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    # License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    dacite >= 1.6.0
    pyyaml>=5.4.1
    numpy>=1.20.2
    testfixtures>=6.18.0
    matplotlib>=3.4.2
    silberstral>=0.2.3

[options.packages.find]
where = src
